First try at the WPDS. Still not complete