@@ -9,14 +9,24 @@ import de.breakpointsec.pushdown.rules.NormalRule;
 import de.breakpointsec.pushdown.rules.PopRule;
 import de.breakpointsec.pushdown.rules.PushRule;
 import de.breakpointsec.pushdown.rules.Rule;
-import de.fraunhofer.aisec.analysis.structures.*;
+import de.fraunhofer.aisec.analysis.structures.AnalysisContext;
+import de.fraunhofer.aisec.analysis.structures.LegacyCPGInstanceContext;
+import de.fraunhofer.aisec.analysis.structures.ConstantValue;
+import de.fraunhofer.aisec.analysis.structures.ErrorValue;
+import de.fraunhofer.aisec.analysis.structures.Finding;
+import de.fraunhofer.aisec.analysis.structures.MarkContextHolder;
+import de.fraunhofer.aisec.analysis.structures.NonNullPair;
+import de.fraunhofer.aisec.analysis.structures.Pair;
 import de.fraunhofer.aisec.analysis.utils.Utils;
-import de.fraunhofer.aisec.cpg.graph.Graph;
 import de.fraunhofer.aisec.cpg.graph.declarations.Declaration;
 import de.fraunhofer.aisec.cpg.graph.declarations.FunctionDeclaration;
 import de.fraunhofer.aisec.cpg.graph.declarations.ParamVariableDeclaration;
 import de.fraunhofer.aisec.cpg.graph.declarations.VariableDeclaration;
-import de.fraunhofer.aisec.cpg.graph.statements.*;
+import de.fraunhofer.aisec.cpg.graph.statements.CompoundStatement;
+import de.fraunhofer.aisec.cpg.graph.statements.DeclarationStatement;
+import de.fraunhofer.aisec.cpg.graph.statements.IfStatement;
+import de.fraunhofer.aisec.cpg.graph.statements.ReturnStatement;
+import de.fraunhofer.aisec.cpg.graph.statements.Statement;
 import de.fraunhofer.aisec.cpg.graph.statements.expressions.CallExpression;
 import de.fraunhofer.aisec.cpg.graph.statements.expressions.DeclaredReferenceExpression;
 import de.fraunhofer.aisec.cpg.graph.statements.expressions.Expression;
@@ -34,21 +44,32 @@ import de.fraunhofer.aisec.markmodel.MOp;
 import de.fraunhofer.aisec.markmodel.MRule;
 import de.fraunhofer.aisec.markmodel.fsm.Node;
 import org.apache.tinkerpop.gremlin.process.traversal.util.FastNoSuchElementException;
+import org.apache.tinkerpop.gremlin.structure.Direction;
+import org.apache.tinkerpop.gremlin.structure.Edge;
 import org.apache.tinkerpop.gremlin.structure.Vertex;
 import org.checkerframework.checker.nullness.qual.NonNull;
 import org.checkerframework.checker.nullness.qual.Nullable;
 import org.eclipse.emf.common.util.TreeIterator;
 import org.eclipse.emf.ecore.EObject;
-import org.jetbrains.annotations.NotNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.File;
 import java.net.URI;
-import java.util.*;
+import java.util.ArrayDeque;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Comparator;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 
-import static de.fraunhofer.aisec.analysis.markevaluation.EvaluationHelperKt.*;
+import static de.fraunhofer.aisec.crymlin.CrymlinQueryWrapper.isCallExpression;
 import static de.fraunhofer.aisec.crymlin.dsl.CrymlinConstants.*;
 import static de.fraunhofer.aisec.crymlin.dsl.__.__;
 import static java.lang.Math.toIntExact;
@@ -71,15 +92,15 @@ import static java.lang.Math.toIntExact;
  * [1] Reps T., Lal A., Kidd N. (2007) Program Analysis Using Weighted Pushdown Systems. In: Arvind V., Prasad S. (eds) FSTTCS 2007: Foundations of Software Technology
  * and Theoretical Computer Science. FSTTCS 2007. Lecture Notes in Computer Science, vol 4855. Springer, Berlin, Heidelberg
  */
-public class TypeStateAnalysis {
-	private static final Logger log = LoggerFactory.getLogger(TypeStateAnalysis.class);
+public class LegacyTypeStateAnalysis {
+	private static final Logger log = LoggerFactory.getLogger(LegacyTypeStateAnalysis.class);
 	private MRule rule;
 	@NonNull
 	private final MarkContextHolder markContextHolder;
-	private GraphInstanceContext instanceContext;
-	private final AnalysisContext ctx;
+	private LegacyCPGInstanceContext instanceContext;
+	private AnalysisContext ctx;
 
-	public TypeStateAnalysis(@NonNull MarkContextHolder markContextHolder, @NonNull AnalysisContext ctx) {
+	public LegacyTypeStateAnalysis(@NonNull MarkContextHolder markContextHolder, @NonNull AnalysisContext ctx) {
 		this.markContextHolder = markContextHolder;
 		this.ctx = ctx;
 	}
@@ -90,17 +111,17 @@ public class TypeStateAnalysis {
 	 * @param orderExpr
 	 * @param contextID
 	 * @param ctx
-	 * @param graph
+	 * @param crymlinTraversal
 	 * @param rule
 	 * @return
 	 * @throws IllegalTransitionException
 	 */
 	public ConstantValue analyze(OrderExpression orderExpr, Integer contextID, AnalysisContext ctx,
-			Graph graph,
+			CrymlinTraversalSource crymlinTraversal,
 			MRule rule) throws IllegalTransitionException {
-		log.info("Typestate analysis starting for {}", ctx);
+		log.info("Typestate analysis starting for {} and {}", ctx, crymlinTraversal);
 
-		instanceContext = markContextHolder.getContext(contextID).getInstanceContext();
+		instanceContext = markContextHolder.getLegacyContext(contextID).getInstanceContext();
 		this.rule = rule;
 
 		// Remember the order expression we are analyzing
@@ -121,7 +142,7 @@ public class TypeStateAnalysis {
 		log.debug("Initial typestate NFA:\n{}", tsNFA);
 
 		// Create a weighted pushdown system
-		var wpds = createWpds(graph, tsNFA);
+		CpgWpds wpds = createWpds(crymlinTraversal, tsNFA);
 
 		/*
 		 * Create a weighted automaton (= a weighted NFA) that describes the initial configurations. The initial configuration is the statement containing the declaration
@@ -129,7 +150,7 @@ public class TypeStateAnalysis {
 		 *
 		 * (e.g., "b").
 		 */
-		File currentFile = getFileFromMarkInstance(markInstance, graph);
+		File currentFile = getFileFromMarkInstance(markInstance, crymlinTraversal);
 		if (currentFile == null) {
 			currentFile = new File("FIXME");
 		}
@@ -175,27 +196,35 @@ public class TypeStateAnalysis {
 
 		ConstantValue of = ConstantValue.of(findings.isEmpty());
 		if (markContextHolder.isCreateFindingsDuringEvaluation()) {
-			markContextHolder.getContext(contextID).setFindingAlreadyAdded(true);
+			markContextHolder.getLegacyContext(contextID).setFindingAlreadyAdded(true);
 		}
 		return of;
 	}
 
 	@Nullable
-	private File getFileFromMarkInstance(String markInstance, Graph graph) {
-		var v = instanceContext.getNode(markInstance);
+	private File getFileFromMarkInstance(String markInstance, CrymlinTraversalSource crymlinTraversal) {
+		Vertex v = instanceContext.getVertex(markInstance);
 		if (v == null) {
 			log.error("No vertex found for Mark instance: {}. Will not run TS analysis", markInstance);
 			return null;
 		}
 
 		// Find the function in which the vertex is located, so we can use the first statement in function as a start
-		var containingFunction = getContainingFunction(v);
-		if (containingFunction == null) {
-			log.error("Vertex {} not located within a function. Cannot start TS analysis for rule {}", v.getCode(), rule);
+		Optional<Vertex> containingFunctionOpt = CrymlinQueryWrapper.getContainingFunction(v, crymlinTraversal);
+		if (containingFunctionOpt.isEmpty()) {
+			log.error("Vertex {} not located within a function. Cannot start TS analysis for rule {}", v.property("code").orElse(""), rule);
 			return null;
 		}
 
-		return new File(containingFunction.getFile());
+		// Turn function vertex into a FunctionDeclaration so we can work with it
+		FunctionDeclaration funcDecl = (FunctionDeclaration) ctx.getDatabase()
+				.vertexToNode(containingFunctionOpt.get());
+		if (funcDecl == null) {
+			log.error("Function {} could not be retrieved as a FunctionDeclaration. Cannot start TS analysis for rule {}",
+				containingFunctionOpt.get().property("name").orElse(""), rule);
+			return null;
+		}
+		return new File(funcDecl.getFile());
 	}
 
 	@Nullable
@@ -326,25 +355,25 @@ public class TypeStateAnalysis {
 	 * <p>
 	 * When populating the WPDS using post-* algorithm, the result will be an automaton capturing the reachable type states.
 	 *
-	 * @param graph
+	 * @param crymlinTraversal
 	 * @param tsNfa
 	 * @return
 	 * @throws IllegalTransitionException
 	 */
-	private CpgWpds createWpds(Graph graph, NFA tsNfa) {
+	private CpgWpds createWpds(CrymlinTraversalSource crymlinTraversal, NFA tsNfa) {
 		log.info("-----  Creating WPDS ----------");
 
 		/* Create empty WPDS */
 		CpgWpds wpds = new CpgWpds();
 
-		/*
+		/**
 		 * For each function, create a WPDS.
 		 *
 		 * The (normal, push, pop) rules of the WPDS reflect the data flow, similar to a static taint analysis.
 		 *
 		 */
-		for (var functionDeclaration : getFunctions(graph)) {
-			WPDS<Stmt, Val, TypestateWeight> funcWpds = createWpds(functionDeclaration, tsNfa, graph);
+		for (Vertex functionDeclaration : crymlinTraversal.functions().toList()) {
+			WPDS<Stmt, Val, TypestateWeight> funcWpds = createWpds(functionDeclaration, tsNfa, crymlinTraversal);
 			for (Rule<Stmt, Val, TypestateWeight> r : funcWpds.getAllRules()) {
 				wpds.addRule(r);
 			}
@@ -363,46 +392,49 @@ public class TypeStateAnalysis {
 	 * Turns a single function into a WPDS.
 	 *
 	 * @param tsNfa
-	 * @param graph
+	 * @param crymlinTraversal
 	 * @return
 	 */
-	private WPDS<Stmt, Val, TypestateWeight> createWpds(@NonNull FunctionDeclaration fd, NFA tsNfa, Graph graph) {
+	private WPDS<Stmt, Val, TypestateWeight> createWpds(@NonNull Vertex fdVertex, NFA tsNfa, CrymlinTraversalSource crymlinTraversal) {
 		// To remember already visited nodes and avoid endless iteration
-		var alreadySeen = new HashSet<de.fraunhofer.aisec.cpg.graph.Node>();
+		HashSet<Vertex> alreadySeen = new HashSet<>();
+
+		var db = ctx.getDatabase();
 
 		// the WPDS we are creating here
 		CpgWpds wpds = new CpgWpds();
 
-		log.info("Processing function {}", fd.getName());
+		FunctionDeclaration fd = (FunctionDeclaration) db.vertexToNode(fdVertex);
+		log.info("Processing function {}", fdVertex.property(NAME).orElse(""));
 
 		// Work list of following EOG nodes. Not all EOG nodes will result in a WPDS rule, though.
-		var worklist = new ArrayDeque<NonNullPair<de.fraunhofer.aisec.cpg.graph.Node, Set<Stmt>>>();
-		worklist.add(new NonNullPair<>(fd, Set.of(new Stmt(fd.getName(), Utils.getRegion(fd)))));
+		ArrayDeque<NonNullPair<Vertex, Set<Stmt>>> worklist = new ArrayDeque<>();
+		worklist.add(new NonNullPair<>(fdVertex, Set.of(new Stmt(fd.getName(), Utils.getRegion(fd)))));
 
-		var skipTheseValsAtStmt = new HashMap<Stmt, Val>();
-		var valsInScope = new HashSet<Val>();
+		Map<Stmt, Val> skipTheseValsAtStmt = new HashMap<>();
+		Set<Val> valsInScope = new HashSet<>();
 
 		// Make sure we track all parameters inside this function
-		var params = fd.getParameters();
+		List<ParamVariableDeclaration> params = fd.getParameters();
 		for (ParamVariableDeclaration p : params) {
 			valsInScope.add(new Val(p.getName(), fd.getName()));
 		}
 
 		// Start creation of WPDS rules by traversing the EOG
 		while (!worklist.isEmpty()) {
-			var currentPair = worklist.pop();
-			var v = currentPair.getValue0();
+			NonNullPair<Vertex, Set<Stmt>> currentPair = worklist.pop();
+			Vertex v = currentPair.getValue0();
 
 			for (Stmt previousStmt : currentPair.getValue1()) {
 				// We consider only "Statements" and CallExpressions in the EOG
 				if (isRelevantStmt(v)) {
-					createRulesForStmt(wpds, fd, previousStmt, v, valsInScope, skipTheseValsAtStmt, tsNfa, graph);
+					createRulesForStmt(wpds, fdVertex, previousStmt, v, valsInScope, skipTheseValsAtStmt, tsNfa, crymlinTraversal);
 				} // End isRelevantStmt()
 			}
 
 			// Add successors to work list
-			var successors = getSuccessors(v, alreadySeen);
-			for (var succ : successors) {
+			Collection<? extends Vertex> successors = getSuccessors(v, alreadySeen);
+			for (Vertex succ : successors) {
 				if (isRelevantStmt(v)) {
 					worklist.add(new NonNullPair<>(succ, Set.of(vertexToStmt(v))));
 				} else {
@@ -413,20 +445,23 @@ public class TypeStateAnalysis {
 		return wpds;
 	}
 
-	@SuppressWarnings("squid:S107")
+	@java.lang.SuppressWarnings("squid:S107")
 	private void createRulesForStmt(@NonNull WPDS<Stmt, Val, TypestateWeight> wpds,
-			@NonNull FunctionDeclaration functionVertex,
+			@NonNull Vertex functionVertex,
 			@NonNull Stmt previousStmt,
-			de.fraunhofer.aisec.cpg.graph.Node stmtNode,
+			@NonNull Vertex currentStmtVertex,
 			@NonNull Set<Val> valsInScope,
 			@NonNull Map<Stmt, Val> skipTheseValsAtStmt,
 			@NonNull NFA tsNfa,
-			@NonNull Graph graph) {
-		String currentFunctionName = (String) functionVertex.getName();
-		Stmt currentStmt = vertexToStmt(stmtNode);
+			@NonNull CrymlinTraversalSource crymlinTraversal) {
+		var db = ctx.getDatabase();
+
+		String currentFunctionName = (String) functionVertex.property(NAME).orElse("UNKNOWN");
+		Stmt currentStmt = vertexToStmt(currentStmtVertex);
+		de.fraunhofer.aisec.cpg.graph.Node stmtNode = db.vertexToNode(currentStmtVertex);
 
 		/* First we create normal rules from previous stmt to the current stmt, simply propagating existing values. */
-		Set<NormalRule<Stmt, Val, TypestateWeight>> normalRules = createNormalRules(previousStmt, stmtNode, valsInScope, tsNfa);
+		Set<NormalRule<Stmt, Val, TypestateWeight>> normalRules = createNormalRules(previousStmt, currentStmtVertex, valsInScope, tsNfa);
 		for (NormalRule<Stmt, Val, TypestateWeight> normalRule : normalRules) {
 			/*
 			  If this is a call into a known method, we skip immediate propagation. In that case, data flows *into* the method.
@@ -440,13 +475,13 @@ public class TypeStateAnalysis {
 		/*
 		  Handle calls into known methods (not a "phantom" method) by creating push rule.
 		 */
-		if (stmtNode instanceof CallExpression && !Utils.isPhantom((CallExpression) stmtNode)) {
+		if (CrymlinQueryWrapper.isCallExpression(currentStmtVertex) && !Utils.isPhantom((CallExpression) stmtNode)) {
 			CallExpression callE = (CallExpression) stmtNode;
 			/*
 			 * For calls to functions whose body is known, we create push/pop rule pairs. All arguments flow into the parameters of the function. The
 			 * "return site" is the statement to which flow returns after the function call.
 			 */
-			Set<PushRule<Stmt, Val, TypestateWeight>> pushRules = createPushRules(callE, graph, currentFunctionName, currentStmt, stmtNode);
+			Set<PushRule<Stmt, Val, TypestateWeight>> pushRules = createPushRules(callE, crymlinTraversal, currentFunctionName, currentStmt, currentStmtVertex);
 			for (PushRule<Stmt, Val, TypestateWeight> pushRule : pushRules) {
 				log.debug("  Adding push rule: {}", pushRule);
 				wpds.addRule(pushRule);
@@ -454,19 +489,20 @@ public class TypeStateAnalysis {
 				// Remember that arguments flow only into callee and do not bypass it.
 				skipTheseValsAtStmt.put(pushRule.getCallSite(), pushRule.getS1());
 			}
-		} else if (stmtNode instanceof VariableDeclaration) {
+		} else if (CrymlinQueryWrapper.isVariableDeclaration(currentStmtVertex)) {
 			// Add declVal to set of currently tracked variables
-			VariableDeclaration decl = (VariableDeclaration) stmtNode;
+			VariableDeclaration decl = (VariableDeclaration) db.vertexToNode(currentStmtVertex);
 			Val declVal = new Val(decl.getName(), currentFunctionName);
 			valsInScope.add(declVal);
-		} else if (stmtNode instanceof DeclarationStatement) {
+		} else if (CrymlinQueryWrapper.isDeclarationStatement(currentStmtVertex)) {
 			/* Handle declaration of new variables.
 			 "DeclarationStatements" result in a normal rule, assigning rhs to lhs.
 			*/
 
 			// Note: We might be a bit more gracious here to tolerate incorrect code. For example, a non-declared variable would be a "BinaryOperator".
-			log.debug("Found variable declaration {}", stmtNode.getCode());
-			DeclarationStatement ds = (DeclarationStatement) stmtNode;
+			log.debug("Found variable declaration {}", currentStmtVertex.property("code")
+					.orElse(""));
+			DeclarationStatement ds = (DeclarationStatement) db.vertexToNode(currentStmtVertex);
 			for (Declaration decl : ds.getDeclarations()) {
 				if (!(decl instanceof VariableDeclaration)) {
 					continue;
@@ -504,11 +540,11 @@ public class TypeStateAnalysis {
 					wpds.addRule(normalRulePropagate);
 				}
 			}
-		} else if (stmtNode instanceof ReturnStatement) {
+		} else if (CrymlinQueryWrapper.isReturnStatement(currentStmtVertex)) {
 			/* Return statements result in pop rules */
-			ReturnStatement returnV = (ReturnStatement) stmtNode;
+			ReturnStatement returnV = (ReturnStatement) db.vertexToNode(currentStmtVertex);
 			if (returnV != null && !returnV.isDummy()) {
-				Set<Val> returnedVals = findReturnedVals(graph, stmtNode);
+				Set<Val> returnedVals = findReturnedVals(crymlinTraversal, currentStmtVertex);
 
 				for (Val returnedVal : returnedVals) {
 					Set<NFATransition<Node>> relevantNFATransitions = tsNfa.getTransitions()
@@ -530,7 +566,7 @@ public class TypeStateAnalysis {
 				}
 
 				// Pop Rules for side effects on parameters
-				Map<String, Set<Pair<Val, Val>>> paramToValueMap = findParamToValues(functionVertex, stmtNode, graph);
+				Map<String, Set<Pair<Val, Val>>> paramToValueMap = findParamToValues(functionVertex, currentStmtVertex, crymlinTraversal);
 				if (paramToValueMap.containsKey(currentFunctionName)) {
 					for (Pair<Val, Val> pToA : paramToValueMap.get(currentFunctionName)) {
 						PopRule<Stmt, Val, TypestateWeight> popRule = new PopRule<>(pToA.getValue0(), currentStmt, pToA.getValue1(),
@@ -577,45 +613,52 @@ public class TypeStateAnalysis {
 	/**
 	 * Returns a set of Vertices which are successors of <code>v</code> in the EOG and are not contained in <code>alreadySeen</code>.
 	 *
-	 * @param n
+	 * @param v
 	 * @param alreadySeen
 	 * @return
 	 */
-	private HashSet<de.fraunhofer.aisec.cpg.graph.Node> getSuccessors(final de.fraunhofer.aisec.cpg.graph.Node n,
-			@NonNull final HashSet<de.fraunhofer.aisec.cpg.graph.Node> alreadySeen) {
-		var unseenSuccessors = new HashSet<de.fraunhofer.aisec.cpg.graph.Node>();
-
-		for (de.fraunhofer.aisec.cpg.graph.Node succ : n.getNextEOG()) {
+	@NonNull
+	private Collection<? extends Vertex> getSuccessors(@NonNull final Vertex v, @NonNull final HashSet<Vertex> alreadySeen) {
+		Set<Vertex> unseenSuccessors = new HashSet<>();
+		Vertex vertex = v;
+		Iterator<Edge> eogSuccessors = vertex.edges(Direction.OUT, EOG);
+		while (eogSuccessors.hasNext()) {
+			Vertex succ = eogSuccessors.next()
+					.inVertex();
 			if (!alreadySeen.contains(succ)) {
 				unseenSuccessors.add(succ);
 				alreadySeen.add(succ);
 			}
 		}
-
 		return unseenSuccessors;
 	}
 
 	/**
 	 * We do not convert all EOG nodes into WPDS rules, but only "relevant" ones, i.e. statements and call expressions.
 	 *
-	 * @param node
+	 * @param v
 	 * @return
 	 */
-	private boolean isRelevantStmt(de.fraunhofer.aisec.cpg.graph.Node node) {
-		int numberOfOutgoingEogs = node.getNextEOG().size();
-
-		return node instanceof CallExpression
-				|| node instanceof DeclarationStatement
-				|| node instanceof VariableDeclaration
-				|| node instanceof IfStatement
-				// TODO(oxisto): need the graph to handle it
-				/*|| v.edges(Direction.IN, CrymlinConstants.STATEMENTS).hasNext()*/
-				|| numberOfOutgoingEogs >= 2;
+	private boolean isRelevantStmt(Vertex v) {
+		int numberOfOutgoingEogs = 0;
+		Iterator<Edge> eogs = v.edges(Direction.OUT, EOG);
+		while (eogs.hasNext()) {
+			numberOfOutgoingEogs++;
+			eogs.next();
+		}
+		return isCallExpression(v)
+				|| Utils.hasLabel(v, DeclarationStatement.class)
+				|| Utils.hasLabel(v, VariableDeclaration.class)
+				|| Utils.hasLabel(v, IfStatement.class)
+				|| v.edges(Direction.IN, CrymlinConstants.STATEMENTS).hasNext() || numberOfOutgoingEogs >= 2;
 	}
 
-	private Set<NormalRule<Stmt, Val, TypestateWeight>> createNormalRules(final Stmt previousStmt, final de.fraunhofer.aisec.cpg.graph.Node v, final Set<Val> valsInScope,
-			final NFA tsNfa) {
-		var currentStmt = vertexToStmt(v);
+	private Set<NormalRule<Stmt, Val, TypestateWeight>> createNormalRules(final Stmt previousStmt, final Vertex v, final Set<Val> valsInScope, final NFA tsNfa) {
+		var db = ctx.getDatabase();
+
+		Stmt currentStmt = vertexToStmt(v);
+
+		de.fraunhofer.aisec.cpg.graph.@Nullable Node currentStmtNode = db.vertexToNode(v);
 
 		Set<NormalRule<Stmt, Val, TypestateWeight>> result = new HashSet<>();
 
@@ -625,7 +668,7 @@ public class TypeStateAnalysis {
 			Set<NFATransition<Node>> relevantNFATransitions = tsNfa.getTransitions()
 					.stream()
 					.filter(
-						tran -> triggersTypestateTransition(v, tran.getTarget().getBase(), tran.getTarget().getOp()))
+						tran -> triggersTypestateTransition(currentStmtNode, tran.getTarget().getBase(), tran.getTarget().getOp()))
 					.collect(Collectors.toSet());
 			TypestateWeight weight = relevantNFATransitions.isEmpty() ? TypestateWeight.one() : new TypestateWeight(relevantNFATransitions);
 
@@ -725,48 +768,52 @@ public class TypeStateAnalysis {
 	/**
 	 * Finds the mapping from function parameters to arguments of calls to this method. This is needed for later construction of pop rules.
 	 *
-	 * @param calleeFD
+	 * @param functionDeclaration
 	 * @param returnV
-	 * @param graph
-	 *
+	 * @param crymlinTraversalSource
 	 * @return
 	 */
 	@NonNull
-	private Map<String, Set<Pair<Val, Val>>> findParamToValues(FunctionDeclaration calleeFD, de.fraunhofer.aisec.cpg.graph.Node returnV, Graph graph) {
+	private Map<String, Set<Pair<Val, Val>>> findParamToValues(Vertex functionDeclaration, Vertex returnV, CrymlinTraversalSource crymlinTraversalSource) {
+		var db = ctx.getDatabase();
+
 		Map<String, Set<Pair<Val, Val>>> result = new HashMap<>();
 		try {
+			FunctionDeclaration calleeFD = (FunctionDeclaration) db.vertexToNode(functionDeclaration);
 			if (calleeFD == null) {
 				log.error("Unexpected: FunctionDeclaration of callee is null.");
 				return result;
 			}
 			String calleeName = calleeFD.getName();
 
-			/*List<Vertex> calls = crymlinTraversalSource.byID((long) returnV.id())
+			List<Vertex> calls = crymlinTraversalSource.byID((long) returnV.id())
 					.repeat(__().out(DFG))
 					.until(
 						__().hasLabel(CallExpression.class.getSimpleName()))
 					.limit(5)
-					.toList();*/
-			// TODO: do
-			List<CallExpression> calls = new ArrayList<>();
+					.toList();
 
-			for (var ce : calls) {
+			for (Vertex call : calls) {
+				CallExpression ce = (CallExpression) db.vertexToNode(call);
+				if (ce == null) {
+					continue;
+				}
+
 				/*
 				 * Find name of calling function ("caller") TODO This is not an optimal way to find out the calling function, as we need to traverse potentially many EOG
 				 * edges.
 				 */
-				/*List<Vertex> callers = crymlinTraversalSource.byID((long) call.id())
+				List<Vertex> callers = crymlinTraversalSource.byID((long) call.id())
 						.repeat(__().in(EOG))
 						.until(
 							__().hasLabel(FunctionDeclaration.class.getSimpleName()))
 						.limit(50)
-						.toList();*/
-				// TODO: do
-				List<FunctionDeclaration> callers = new ArrayList<FunctionDeclaration>();
+						.toList();
 
-				for (var caller : callers) {
+				for (Vertex callerV : callers) {
+					FunctionDeclaration caller = (FunctionDeclaration) db.vertexToNode(callerV);
 					if (caller == null) {
-						log.error("Unexpected: Null Node object for FunctionDeclaration {}", caller);
+						log.error("Unexpected: Null Node object for FunctionDeclaration vertex {}", callerV.id());
 						continue;
 					}
 					List<Expression> args = ce.getArguments();
@@ -802,34 +849,47 @@ public class TypeStateAnalysis {
 	 * @param v
 	 * @return
 	 */
-	private Set<Val> findReturnedVals(Graph graph, de.fraunhofer.aisec.cpg.graph.Node node) {
+	private Set<Val> findReturnedVals(CrymlinTraversalSource crymlinTraversalSource, Vertex v) {
 		/*
 		 * Follow along "DFG" edges from the return statement to the CallExpression that initiated the call. Then check if there is a "DFG" edge from that CallExpression
 		 * to a VariableDeclaration.
 		 */
 		Set<Val> returnedVals = new HashSet<>();
-		var calls = node.getNextDFG().stream().filter(x -> x instanceof CallExpression).collect(Collectors.toList());
+		List<Vertex> calls = crymlinTraversalSource.byID((long) v.id())
+				.repeat(__().out(DFG))
+				.until(__().hasLabel(CallExpression.class.getSimpleName()))
+				.limit(
+					5)
+				.toList();
 
-		for (var call : calls) {
+		for (Vertex call : calls) {
 			// We found the call site into our method. Now see if the return value is used.
-			var nextDfgAftercall = call.getNextDFG().stream().findFirst();
+			Optional<Vertex> nextDfgAftercall = crymlinTraversalSource.byID((long) call.id()).out(DFG).tryNext();
 			String returnVar = "";
 			if (nextDfgAftercall.isPresent()) {
-				if (nextDfgAftercall.get() instanceof VariableDeclaration
-						|| nextDfgAftercall.get() instanceof DeclaredReferenceExpression) {
+				if (nextDfgAftercall.get().label().equals(VariableDeclaration.class.getSimpleName())
+						|| nextDfgAftercall.get().label().equals(DeclaredReferenceExpression.class.getSimpleName())) {
 					// return value is used. Remember variable name.
-					returnVar = nextDfgAftercall.get().getName();
+					returnVar = nextDfgAftercall.get().property("name").value().toString();
 				}
 
 				// Finally we need to find out in which function the call site actually is
 				String callerFunctionName = null;
-				var callerFunction = getContainingFunction(call);
-				if (callerFunction != null) {
-					callerFunctionName = callerFunction.getName();
-				}
+				CrymlinTraversal<Vertex, Vertex> traversal = crymlinTraversalSource.byID((long) call.id())
+						.repeat(__().out(EOG))
+						.until(__().in(CrymlinConstants.STATEMENTS))
+						//					.limit(10)
+						.in(CrymlinConstants.STATEMENTS)
+						.in(CrymlinConstants.BODY);
+				if (traversal.hasNext()) {
+					Vertex callerFunction = traversal.next();
+					if (callerFunction != null) {
+						callerFunctionName = callerFunction.property("name").value().toString();
+					}
 
-				if (callerFunctionName != null) {
-					returnedVals.add(new Val(returnVar, callerFunctionName));
+					if (callerFunctionName != null) {
+						returnedVals.add(new Val(returnVar, callerFunctionName));
+					}
 				}
 			}
 		}
@@ -844,21 +904,19 @@ public class TypeStateAnalysis {
 	 * resulting set may contain more than one rule.
 	 *
 	 * @param mce
-	 * @param graph
+	 * @param crymlinTraversal
 	 * @param currentFunctionName
 	 * @param currentStmt
 	 * @param currentStmtVertex
 	 * @return
 	 */
-	private Set<PushRule<Stmt, Val, TypestateWeight>> createPushRules(CallExpression mce, Graph graph, String currentFunctionName,
-			Stmt currentStmt, de.fraunhofer.aisec.cpg.graph.Node currentStmtVertex) {
+	private Set<PushRule<Stmt, Val, TypestateWeight>> createPushRules(CallExpression mce, CrymlinTraversalSource crymlinTraversal, String currentFunctionName,
+			Stmt currentStmt, Vertex currentStmtVertex) {
 		// Return site(s). Actually, multiple return sites will only occur in case of exception handling.
-		//var returnSites = CrymlinQueryWrapper.getNextStatements(crymlinTraversal, (long) currentStmtVertex.id());
-		// TODO: not sure how
-		var returnSites = new ArrayList<de.fraunhofer.aisec.cpg.graph.Node>();
+		List<Vertex> returnSites = CrymlinQueryWrapper.getNextStatements(crymlinTraversal, (long) currentStmtVertex.id());
 
 		// Arguments of function call
-		var argVals = argumentsToVals(mce, currentFunctionName);
+		List<Val> argVals = argumentsToVals(mce, currentFunctionName);
 
 		Set<PushRule<Stmt, Val, TypestateWeight>> pushRules = new HashSet<>();
 		for (FunctionDeclaration potentialCallee : mce.getInvokes()) {
@@ -868,14 +926,14 @@ public class TypeStateAnalysis {
 					potentialCallee.getSignature());
 				continue;
 			}
-			var parmVals = parametersToVals(potentialCallee);
+			List<Val> parmVals = parametersToVals(potentialCallee);
 
 			// Get first statement of callee. This is the jump target of our Push Rule.
-			var firstStmt = getFirstStmtOfMethod(potentialCallee);
+			Statement firstStmt = getFirstStmtOfMethod(potentialCallee);
 
 			if (firstStmt != null && firstStmt.getCode() != null) {
 				for (int i = 0; i < argVals.size(); i++) {
-					for (var returnSiteVertex : returnSites) {
+					for (Vertex returnSiteVertex : returnSites) {
 						Stmt returnSite = vertexToStmt(returnSiteVertex);
 
 						PushRule<Stmt, Val, TypestateWeight> pushRule = new PushRule<>(
@@ -935,17 +993,32 @@ public class TypeStateAnalysis {
 	}
 
 	/**
-	 * Convert a CPG node into a <code>Stmt</code> in context of the WPDS.
+	 * Convert a CPG vertex into a <code>Stmt</code> in context of the WPDS.
 	 *
-	 * @param n CPG node
-	 * @return A <code>Stmt</code>, holding the "code" and "location->region" properties of <code>n</code>>.
+	 * @param v CPG vertex
+	 * @return A <code>Stmt</code>, holding the "code" and "location->region" properties of <code>v</code>>.
 	 */
-	@NotNull
-	private Stmt vertexToStmt(@NotNull de.fraunhofer.aisec.cpg.graph.Node n) {
-		var region = Utils.getRegion(n);
-
+	@NonNull
+	private Stmt vertexToStmt(@NonNull Vertex v) {
+		Region region = new Region(-1, -1, -1, -1);
+		if (v.property(START_LINE).isPresent() &&
+				v.property(START_COLUMN).isPresent() &&
+				v.property(END_LINE).isPresent() &&
+				v.property(END_COLUMN).isPresent()) {
+			region = new Region(
+				toIntExact((long) v.property(START_LINE)
+						.value()),
+				toIntExact((long) v.property(START_COLUMN)
+						.value()),
+				toIntExact((long) v.property(END_LINE)
+						.value()),
+				toIntExact((long) v.property(END_COLUMN)
+						.value()));
+		}
 		return new Stmt(
-			n.getCode(),
+			v.property("code")
+					.orElse("")
+					.toString(),
 			region);
 	}
 }
